[package]
name = "fuusak"
edition = "2021"

version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colorful = "0.3"
derive-new = "0.7"
diff = "0.1"
ignore = "0.4"
notify = "4.0"
pest = "2.1"
pest_derive = "2.1"
rand = "0.9"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"