[package]
name = "fuusak-cli"
edition = "2024"

version = "0.1.0"

[dependencies]
fuusak = { path = "fuusak" }
fuusak-err-macro = { path = "err_macro" }
clap = { version = "4.5", features = ["derive"] }
colorful = "0.3"
derive-new = { workspace = true }
notify-debouncer-full = "0.6"
rand = "0.9"

[workspace.dependencies]
derive-new = "0.7"

[[bin]]
name = "fuusak"
path = "src/main.rs"